--- a/templates/forums/index.html
+++ b/templates/forums/index.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 
-<html class=
-"js flexboxlegacy canvas canvastext no-touch history backgroundsize csscolumns cssgradients csstransforms csstransforms3d video localstorage blobconstructor cors no-cssmask dataview filereader fileinput fullscreen formvalidation todataurljpeg todataurlwebp no-exif-orientation wf-jubilat-n2-active wf-jubilat-n4-active wf-jubilat-n5-active wf-jubilat-n6-active wf-active"
+<html class= "js flexboxlegacy canvas canvastext no-touch history backgroundsize csscolumns cssgradients csstransforms csstransforms3d video localstorage blobconstructor cors no-cssmask dataview filereader fileinput fullscreen formvalidation todataurljpeg todataurlwebp no-exif-orientation wf-jubilat-n2-active wf-jubilat-n4-active wf-jubilat-n5-active wf-jubilat-n6-active wf-active"
 data-platform="Win32" data-useragent=
 "Mozilla/5.0 (Windows NT 6.1; WOW64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/27.0.1453.116 Safari/537.36"
 id="" lang="en" style="">
@@ -32,8 +31,6 @@ try{Typekit.load();}catch(e){}
 </head>
 
 <body class="is-not-scrolling default skin-no" id="forums">
-  <section class="message-success" id="message-block" style="display: none">
-  </section>
 
   <div id="site-main">
     <div id="mantle_skin">
@@ -2523,29 +2520,6 @@ try{Typekit.load();}catch(e){}
         </div>
       </section>
     </div>
-
-    <footer>
-      <div class="container row">
-        <a class="logo-gamespot" href=
-        "http://www.gamespot.com">Gamespot.com</a>
-
-        <p>© 2013 CBS Interactive Inc. All rights reserved.</p><a href=
-        "http://www.cbsinteractive.com/advertise/">Advertise</a> <a href=
-        "/api">API</a> <a href=
-        "https://cbsi.secure.force.com/CBSi/articles/FAQ/CBSi-Privacy-Policy-Highlights?template=template_privacygl&amp;referer=privacygl.com">
-        Privacy</a> <a href="/help/">Help</a>
-      </div>
-
-      <div class="container row">
-        <a href="http://facebook.com/giantbombdotcom"><em class=
-        "icon icon-facebook-sign"></em> facebook.com/giantbombdotcom</a>
-        <a href="http://twitter.com/giantbomb"><em class=
-        "icon icon-twitter"></em> twitter.com/giantbomb</a> <a href=
-        "http://youtube.com/TheRealGiantBomb"><em class="icon icon-play"></em>
-        youtube.com/TheRealGiantBomb</a> <a href="/feeds" title=
-        "RSS Feeds"><em class="icon icon-rss"></em> RSS</a>
-      </div>
-    </footer>
   </div><script src=
   "//ajax.googleapis.com/ajax/libs/swfobject/2.2/swfobject.js" type=
   "text/javascript"></script> <script src=
@@ -2554,327 +2528,10 @@ try{Typekit.load();}catch(e){}
 "//ajax.googleapis.com/ajax/libs/jqueryui/1.8.23/jquery-ui.min.js" type=
 "text/javascript"></script> <script src=
 "http://static.giantbomb.com/js/compiled/all.js?a256fbe94b527faa37c38971dd3455db"
-  type="text/javascript"></script> <script id="imageInfoBarTemplate" type="text/template">
-<a href="<%= profileUrl %>" class="avatar img"><img src="<%= avatar %>" /></a>
-      <div>
-        <a href="<%= profileUrl %>"><%= author %></a> uploaded on <%= dateCreated %>.
-      </div>
-  </script> <script id="imageCommentsTemplate" type="text/template">
-<li>
-        <a href="<%= user.url %>" class="avatar img">
-          <img src="<%= user.img %>" />
-        </a>
-        <div>
-          <a href="<%= user.url %>"><%= user.username %></a> <%= body %>
-        </div>
-      </li>
-  </script> <script id="imageFilmstripTemplate" type="text/template">
-<li>
-        <a href="#imageViewer<%= id %>" data-ref-id="<%= id %>"><img src="http://gs.cbsimg.net/b.gif" data-img-src="<%= thumbnail %>" /></a>
-      </li>
-  </script>
+  type="text/javascript"></script> 
 
-  <div class="filmstrip is-hidden" id="js-filmstrip">
-    <meta class="image_view-tracking-settings" content=
-    "{&quot;pageParams&quot;:{&quot;ptid&quot;:&quot;6052&quot;,&quot;onid&quot;:&quot;&quot;},&quot;cleargifSrc&quot;:&quot;http:\/\/dw.cbsi.com\/clear\/c.gif?ptid=6052&amp;onid=&amp;ts=1375858224&quot;}"
-    data-tracking-service="dw" id="image_view-tracking-dw">
-    <meta class="image_view-tracking-settings" content=
-    "{&quot;custom&quot;:{&quot;PageType&quot;:{&quot;index&quot;:1,&quot;name&quot;:&quot;PageType&quot;,&quot;value&quot;:&quot;6052&quot;,&quot;scope&quot;:3},&quot;User Type&quot;:{&quot;index&quot;:2,&quot;name&quot;:&quot;User Type&quot;,&quot;value&quot;:&quot;Registered&quot;,&quot;scope&quot;:1},&quot;Subscription Type&quot;:{&quot;index&quot;:3,&quot;name&quot;:&quot;Subscription Type&quot;,&quot;value&quot;:&quot;Year&quot;,&quot;scope&quot;:1}}}"
-    data-tracking-service="ga" id="image_view-tracking-ga">
-    <meta class="image_view-tracking-settings" content=
-    "{&quot;context&quot;:{&quot;page_type_id&quot;:&quot;6052&quot;,&quot;page_type&quot;:&quot;Image Viewer&quot;,&quot;content_type&quot;:&quot;user generated content&quot;,&quot;sections&quot;:&quot;user generated content&quot;,&quot;user_status&quot;:&quot;Authenticated&quot;}}"
-    data-tracking-service="om" id="image_view-tracking-om">
-
-    <div class="image-mask" id="js-image-mask"></div>
-
-    <div class="image-viewer-ad image-viewer-leader" id="js-image-ad-leader"
-    style=""></div><span class="image-control image-close" id="js-image-close"
-    style="top: 40px; right: 338.888888835907px;" title=
-    "Close Viewer"><em class="icon icon-remove"></em></span>
-
-    <div class="image-pane" id="js-image-pane" style=
-    "width: 1805.111111164093px; height: 492px;">
-      <h3 class="image-title" id="js-image-title"></h3><img alt="" id=
-      "imageSource" src=""> <span class="image-fs" id="js-image-fs"><em class=
-      "icon icon-resize-full"></em></span>
-
-      <div class="image-commands-tip image-commands-tip-hide" id=
-      "js-image-commands-tip">
-        <p>Use your keyboard!</p>
-
-        <ul class="keyboard light">
-          <li><em class="icon icon-arrow-left"></em></li>
-
-          <li><em class="icon icon-arrow-right"></em></li>
-
-          <li><em class="icon icon-arrow-up"></em></li>
-
-          <li><em class="icon icon-arrow-down"></em></li>
-
-          <li>ESC</li>
-        </ul>
-      </div><span class="image-control image-prev hidden" id="js-image-prev"
-      title="Previous Image"><em class="icon icon-caret-left"></em></span>
-      <span class="image-control image-next hidden" id="js-image-next" title=
-      "Next Image"><em class="icon icon-caret-right"></em></span>
-    </div>
-
-    <div class="image-comments" id="js-side-column" style=
-    "top: 0px; height: 492px;">
-      <div class="image-viewer-ad image-viewer-mpu" id="js-image-ad-mpu"></div>
-
-      <ul>
-        <li class="upload" id="imageInfo"></li>
-
-        <li class="box login-alert">
-          <form action="" id="imageCommentPoster" name="imageCommentPoster">
-            <fieldset>
-              <textarea id="imageComment" placeholder="Add a comment…">
-</textarea> <input class="btn" id="postComment" type="submit"
-              value="Post comment">
-            </fieldset>
-          </form>
-        </li>
-      </ul>
-
-      <ul class="scroll" id="imageComments"></ul>
-    </div>
-
-    <div class="image-strip">
-      <a class="image-view-film" href="" id="js-image-view-film" style=
-      "left: 842.5555555820465px;"><span class="caret-message" id=
-      "js-btn-message"></span> <em class="icon icon-caret-up" id=
-      "js-btn-icon"></em></a>
-
-      <div class="number"></div>
-
-      <ul id="js-image-strip">
-        <li id="js-image-strip-load-more">
-          <a class="more-images" href="#"></a>
-        </li>
-      </ul>
-    </div>
-  </div><script src=
-  "http://static.giantbomb.com/js/compiled/imageViewer.js?a256fbe94b527faa37c38971dd3455db"
-  type="text/javascript"></script> <!-- BEG: base custom_js -->
-   <!-- END: base custom_js -->
    <script src=
   "http://static.giantbomb.com/js/compiled/wysiwyg.js?a256fbe94b527faa37c38971dd3455db"
   type="text/javascript"></script>
-
-  <dl class="modal fade modal-select-location hide" id="js-uploader">
-    <dd>
-      <form>
-        <dl>
-          <dt class="modal-header">
-            <a class="close" data-dismiss="modal">×</a>
-          </dt>
-
-          <dd>
-            <h3 class="js-modal-title">Where does your image live?</h3>
-          </dd>
-
-          <dd class="modal-body">
-            <input class="opacity-0 fake-file-input" id=
-            "js-uploader-file-input" type="file"><a class="btn" href="#" id=
-            "js-desktop-button"><em class="icon icon-hdd"></em> My
-            desktop</a><button class="btn" data-target="#js-url-address-modal"
-            data-toggle="modal"><em class="icon icon-link"></em> URL
-            Address</button><button class="btn" data-target=
-            "#js-search-site-modal" data-toggle="modal"><em class=
-            "icon icon-search"></em> Search the site</button><button class=
-            "btn" data-target="#js-previous-uploads-modal" data-toggle=
-            "modal"><em class="icon icon-user-md"></em> Previous
-            uploads</button>
-
-            <p>Or drag and drop your images to this page.</p>
-          </dd>
-
-          <dd class="modal-footer hide">
-            <a class="btn" href="#">Close</a>
-          </dd>
-        </dl>
-
-        <dl class="modal fade hide" id="js-url-address-modal">
-          <dd>
-            <form>
-              <dl>
-                <dt class="modal-header">
-                  <a class="close" data-dismiss="modal">×</a>
-                </dt>
-
-                <dd>
-                  <h3 class="js-modal-title">URL Address</h3>
-                </dd>
-
-                <dd class="modal-body">
-                  <input name="urls[]" placeholder="http://" required="" title=
-                  "A valid URL begins with http:// or https://" type=
-                  "url"><a class="btn js-add-another">Add another</a>
-
-                  <div class="error-message hide">
-                    Not a valid URL
-                  </div>
-                </dd>
-
-                <dd class="modal-footer">
-                  <a class="btn js-btn-next" data-loading-text=
-                  "Please wait ..." href="#">Next</a><a class="btn"
-                  data-dismiss="modal" href="#">Close</a>
-                </dd>
-              </dl>
-
-              <dl class="modal fade modal-select-from-gallery hide" id=
-              "js-previous-uploads-modal">
-                <dd>
-                  <form>
-                    <dl>
-                      <dt class="modal-header">
-                        <a class="close" data-dismiss="modal">×</a>
-                      </dt>
-
-                      <dd>
-                        <h3 class="js-modal-title">Previous uploads</h3>
-                      </dd>
-
-                      <dd class="modal-body">
-                        <ul class="galleries">
-                          <li class="selected">
-                            <a class="all-images-link" href="#">All images</a>
-                          </li>
-                        </ul>
-
-                        <div class="images-in-gallery-container">
-                          <div class="js-no-images hide">
-                            No images found
-                          </div>
-
-                          <div class="js-error hide">
-                            Error occurred while searching. Please try again.
-                          </div>
-
-                          <ul class="images-in-gallery">
-                            <li class="loading hide"></li>
-                          </ul>
-                        </div>
-                      </dd>
-
-                      <dd class="modal-footer">
-                        <a class="btn btn-success" data-loading-text=
-                        "Please wait ..." href="#">Select image(s)</a><a class=
-                        "btn" data-dismiss="modal" href="#">Close</a>
-                      </dd>
-                    </dl>
-
-                    <dl class="modal fade modal-select-from-gallery hide" id=
-                    "js-search-site-modal">
-                      <dd>
-                        <form>
-                          <dl>
-                            <dt class="modal-header">
-                              <a class="close" data-dismiss="modal">×</a>
-                            </dt>
-
-                            <dd>
-                              <h3 class="js-modal-title">Search the site</h3>
-                            </dd>
-
-                            <dd class="modal-body">
-                              <div class="search-for-page">
-                                <div>
-                                  <input class="search fluid-width"
-                                  data-search-index=
-                                  "gb_accessory,gb_character,gb_company,gb_concept,gb_franchise,gb_game,gb_location,gb_object,gb_person,gb_platform"
-                                  placeholder="search for a page on the site"
-                                  type="text">
-                                </div>
-                              </div>
-
-                              <ul class="galleries">
-                                <li class="selected">
-                                  <a class="all-images-link" href="#">All
-                                  images</a>
-                                </li>
-                              </ul>
-
-                              <div class="images-in-gallery-container">
-                                <div class="js-no-images hide">
-                                  No images found
-                                </div>
-
-                                <div class="js-error hide">
-                                  Error occurred while searching. Please try
-                                  again.
-                                </div>
-
-                                <ul class="images-in-gallery">
-                                  <li class="loading hide"></li>
-                                </ul>
-                              </div>
-                            </dd>
-
-                            <dd class="modal-footer">
-                              <a class="btn btn-success" data-loading-text=
-                              "Please wait ..." href="#">Select
-                              image(s)</a><a class="btn" data-dismiss="modal"
-                              href="#">Close</a>
-                            </dd>
-                          </dl>
-
-                          <div class="js-uploader-image-preview hide">
-                            <span class="fake-height"></span> <img src="">
-                            <span class="original-dimensions"><span class=
-                            "width">unknown</span> x <span class=
-                            "height">unknown</span></span>
-                          </div>
-
-                          <dl class="modal fade modal-upload-image hide hide"
-                          id="js-upload-progress-modal">
-                            <dd>
-                              <form>
-                                <dl>
-                                  <dt class="modal-header">
-                                    <a class="close" data-dismiss="modal">×</a>
-                                  </dt>
-
-                                  <dd>
-                                    <h3 class="js-modal-title">Uploading
-                                    image</h3>
-                                  </dd>
-
-                                  <dd class="modal-body">
-                                    <ul></ul>
-                                  </dd>
-
-                                  <dd class="modal-footer">
-                                    <div class="form-checkbox-container">
-                                      <input class="form-checkbox js-control"
-                                      id="js-image-embargo-checkbox" name=
-                                      "image-embargo" type="checkbox" value=
-                                      "1"><label class="form-checkbox-label"
-                                      for=
-                                      "js-image-embargo-checkbox">Embargo?</label>
-                                    </div><a class="btn btn-primary js-crop"
-                                    href="#">Crop or Rotate this
-                                    image?</a><a class="btn js-no" href="#">Not
-                                    this time</a><a class="btn js-never" href=
-                                    "#">Don't ask me again</a>
-                                  </dd>
-                                </dl>
-                              </form>
-                            </dd>
-                          </dl>
-                        </form>
-                      </dd>
-                    </dl>
-                  </form>
-                </dd>
-              </dl>
-            </form>
-          </dd>
-        </dl>
-      </form>
-    </dd>
-  </dl>
 </body>
 </html>
