--- a/templates/forums/index.html
+++ b/templates/forums/index.html
@@ -2087,7 +2087,7 @@
 
 {% block aside_content %}
 <aside class="span4">
-  {% include "boardList.html" %}
+  {% include "forums/boardList.html" %}
 
   {% comment %}
   <div class="forum-aside forum-settings">
