--- a/templates/forums/index.html
+++ b/templates/forums/index.html
@@ -1,4 +1,4 @@
-{% extends "base.html.twig" %}
+{% extends "forums/base.html.twig" %}
 
 {% block above_content %}
 <section class="container-fluid forum-above-grid">
@@ -2294,6 +2294,6 @@
   </div> 
   {% endcomment %}
 
-  {% include "topPosters.html" %}
+  {% include "forums/topPosters.html" %}
 </aside>
 {% endblock %}
