--- a/templates/forums/index.html
+++ b/templates/forums/index.html
@@ -1,4 +1,4 @@
-{% extends "forums/base.html.twig" %}
+{% extends "base.html.twig" %}
 
 {% block above_content %}
 <section class="container-fluid forum-above-grid">
