--- a/templates/forums/boardList.html
+++ b/templates/forums/boardList.html
@@ -4,7 +4,7 @@
   <ul>
     {% for board in board_list %}
     <li class="">
-        <a href="/forums/{{ board|slugify }}">{{ board.name }}</a>
+        <a href="/forums/{{ board|slugify }}/{{ board.id }}/">{{ board.name }}</a>
     </li>
     {% endfor %}
 
