--- a/templates/forums/boardList.html
+++ b/templates/forums/boardList.html
@@ -1,5 +1,5 @@
 <div class="forum-aside board-list">
-  <h3 class="header-border">Forums</h3>
+  <h3 class="header-border">Boards</h3>
 
   <ul>
     {% for board in board_list %}
