--- a/templates/forums/index.html
+++ b/templates/forums/index.html
@@ -2,17 +2,7 @@
 
 {% block above_content %}
 <section class="container-fluid forum-above-grid">
-  <ul class="breadcrumbs">
-    <li>
-      <a href="/forums/">Forums</a> »
-    </li>
-
-    <li>
-      <a href="/forums/">All Topics</a>
-    </li>
-  </ul>
-
-  <h1 class="header-border">Recent discussions on Giant Bomb</h1>
+  <h1 class="header-border">Recent discussions</h1>
 </section>
 {% endblock %}
 
@@ -24,9 +14,7 @@
     <div class="forum-bar">
       <a class="btn btn-primary btn-mini" href="/forums/new-topic/"
       rel="nofollow"><em class="icon icon-comment"></em> Start a new
-      topic</a> <a class="btn btn-primary btn-mini" href=
-      "/forums/new-poll/" rel="nofollow"><em class=
-      "icon icon-bar-chart"></em> Start a new Poll</a>
+      topic</a> 
 
       <ul class="paginate">
         <li class="results">221400 results</li>
@@ -2043,9 +2031,7 @@
     <div class="forum-bar">
       <a class="btn btn-primary btn-mini" href="/forums/new-topic/"
       rel="nofollow"><em class="icon icon-comment"></em> Start a new
-      topic</a> <a class="btn btn-primary btn-mini" href=
-      "/forums/new-poll/" rel="nofollow"><em class=
-      "icon icon-bar-chart"></em> Start a new Poll</a>
+      topic</a> 
 
       <ul class="paginate">
         <li class="results">221400 results</li>
