--- a/templates/forums/index.html
+++ b/templates/forums/index.html
@@ -109,7 +109,7 @@
           <td class="views">{{ topic.posts }}</td>
         </tr>
         {% endfor %}
-        {#
+        {% comment %}
         <tr>
           <td class="hide-mobile cell-min">
             <a class="avatar img" href="/profile/zombiepie/"><img src=
@@ -2067,7 +2067,7 @@
 
           <td class="views">0</td>
         </tr>
-        #}
+        {% endcomment %}
       </tbody>
     </table>
 
