--- a/templates/forums/index.html
+++ b/templates/forums/index.html
@@ -68,7 +68,7 @@
           <th class="views">Posts</th>
         </tr>
 
-        {% for topic in topic_list %}
+        {% for topic in latest_topics_list %}
         <tr>
           <td class="hide-mobile cell-min">
             {% comment %} TODO, REPLACE WITH AVATAR? GRAVATAR?{% endcomment %}
