--- a/templates/forums/index.html
+++ b/templates/forums/index.html
@@ -82,7 +82,7 @@
               <img src=
               "http://static.giantbomb.com/bundles/phoenixsite/images/core/sprites/icons/icn-pin-16x16.png">
               {% endif %}
-              <a class="topic-name" data-original-title="" href="">{{ topic.name }}</a> <a class="last" href="">
+              <a class="topic-name" data-original-title="" href="">{{ topic.title }}</a> <a class="last" href="">
               »</a>
             </div>
             <a class="board" href="">{{ topic.board.name }}</a>
